[project]
authors = [{name = "Jevan Goh", email = "javerngoh@gmail.com"}]
dependencies = []
name = "q6taaj04do99vgf9cog0gurq6" #please change this to the name of the actual package
requires-python = ">= 3.11"
version = "0.0.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]

#=========================== pixi ==================================
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64"]

[tool.pixi.pypi-dependencies]
q6taaj04do99vgf9cog0gurq6 = { path = ".", editable = true } #change to the name of the actual package

[tool.pixi.tasks]

[tool.pixi.feature.dev.tasks]
init = """
    gh label delete "bug" --yes || true;
    gh label delete "documentation" --yes || true;
    gh label delete "duplicate" --yes || true;
    gh label delete "enhancement" --yes || true;
    gh label delete "good first issue" --yes || true;
    gh label delete "help wanted" --yes || true;
    gh label delete "invalid" --yes || true;
    gh label delete "question" --yes || true;
    gh label delete "wontfix" --yes || true;
    gh label create "type: bug" --color "d73a4a" --description "Unexpected outcome." --force &&
    gh label create "type: suggestion" --color "ffa5a5" --description "Propose improvements or new ideas." --force &&
    gh label create "scope: content" --color "0075ca" --description "The actual source code." --force &&
    gh label create "scope: docs" --color "a2eeef" --description "Documentation(README, contributing, license)." --force &&
    gh label create "scope: workflow" --color "5319e7" --description "Continuous Integration (CI) related."
"""
setup = "prek install"
sync_pixi_venv = "pixi install"
clean_stubs = "python -c \"import pathlib; [f.unlink() for f in pathlib.Path('$PIXI_PROJECT_NAME').rglob('*.pyi')]\""
generate_stubs = {cmd = "stubgen -p $PIXI_PROJECT_NAME -o . --include-docstrings", depends-on = ["clean_stubs"]}
build_docs = "mkdocs build --config-file mkdocs.yaml"
lint_markdown = "markdownlint-cli2 '**/*.md' '#node_modules'"

[tool.pixi.feature.dev.dependencies]
gh = ">=2.83.2,<3"
ty = ">=0.0.8,<0.0.9"
ruff = ">=0.14.13,<0.15"
prek = ">=0.2.30,<0.3"
mypy = ">=1.19.1,<2"
nodejs = ">=25.2.1,<25.3"
markdownlint-cli2 = ">=0.20.0,<0.21"

[tool.pixi.feature.docs.dependencies]
mkdocs = "*"
mkdocs-material = "*"
pymdown-extensions = ">=10.20,<11"

[tool.pixi.environments.dev]
features = ["dev", "docs"]
solve-group = "default"

##=========================== ruff ===========================
[tool.ruff]
src = ["."]
exclude = ["node_modules", "venv", ".git", ".pixi"]
line-length = 100
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true

#=========================== ty ===========================
[tool.ty.environment]
root = ["."]
